# CudaAid

./: .gitignore  LICENSE  README.md  pyproject.toml
ai_doctor/: __init__.py  __main__.py  cli.py  compatibility.py  cuda.py  fixer.py  gpu.py  models.py  reporter.py  torch_check.py
docs/: index.html  script.js  style.css
